feat: заменен email на телефон, добавлены роли для пользователей
