# internal/app/handler/v1/responses/session.go
@@ -1,10 +1,14 @@
 package responses
 
-import "github.com/upikoth/leaders2023-backend/internal/app/store"
+import (
+	"github.com/upikoth/leaders2023-backend/internal/app/model"
+	"github.com/upikoth/leaders2023-backend/internal/app/store"
+)
 
 type createSessionResponseUser struct {
-	Id    int    `json:"id"`
-	Email string `json:"email"`
+	Id    int        `json:"id"`
+	Phone string     `json:"phone"`
+	Role  model.Role `json:"role"`
 }
 
 type createSessionResponseData struct {
@@ -16,7 +20,30 @@ func CreateSessionResponseFromStoreData(user store.User) createSessionResponseDa
 
 	res.User = createSessionResponseUser{
 		Id:    user.Id,
-		Email: user.Email,
+		Phone: user.Phone,
+		Role:  user.Role,
+	}
+
+	return res
+}
+
+type getSessionResponseUser struct {
+	Id    int        `json:"id"`
+	Phone string     `json:"phone"`
+	Role  model.Role `json:"role"`
+}
+
+type getSessionResponseData struct {
+	User getSessionResponseUser `json:"user"`
+}
+
+func GetSessionResponseFromStoreData(user store.User) getSessionResponseData {
+	res := getSessionResponseData{}
+
+	res.User = getSessionResponseUser{
+		Id:    user.Id,
+		Phone: user.Phone,
+		Role:  user.Role,
 	}
 
 	return res
